--- a/css/style.css
+++ b/css/style.css
@@ -5,20 +5,28 @@ header{
     background-image: url(/mandarin/img/bg2.jpg);
 }
 
+h1,h2{
+    color: #416618;
+}
+
 h1{
     background-color: rgb(248, 248, 248,25%);
     margin-top: 80px;
     padding-left: 11rem;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: #416618;
     font-weight: bold;
 }
+
 .navbar{
     background-color: #fd8800;
 }
 
 h2{    
-    margin-top: 10px;    
+    margin-top: 10px;   
+    border: #416618;
+    border-left: 3px dotted;
+    font: caption;
+    padding: 5px 15px ;
 }
 
 h3{    
