--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,11 @@ h1,h2{
     color: #416618;
 }
 
+a,a:hover{
+    text-decoration: none;
+    color: black;
+}
+
 h1{
     background-color: rgb(248, 248, 248,25%);
     margin-top: 80px;
