--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@ a,a:hover{
     color: black;
 }
 
+.btn{
+    float: right;
+}
+
 h1{
     background-color: rgb(248, 248, 248,25%);
     margin-top: 80px;
@@ -34,11 +38,17 @@ h2{
     padding: 5px 15px ;
 }
 
-h3{    
+h3{
+    text-align: center;
     font-weight: bold;
-    color: #894f3b;    
+    color: #894f3b;
+    font-size: 130%;
+    letter-spacing: 1px;
 }
-
+p{
+    text-align: justify;
+    text-indent: 15px;
+}
 
 li{
     list-style-image: url(../img/lemon2.png);
