--- a/css/style.css
+++ b/css/style.css
@@ -54,12 +54,17 @@ li{
     list-style-image: url(../img/lemon2.png);
 }
 
+.kulonleges{
+    float: left;
+    margin-left: 40px;
+}
 
 td,th{
     text-align: center;
 }
 
 thead>tr:first-child{    
-    letter-spacing: 2px;    
+    letter-spacing: 2px;
+    text-transform: uppercase;  
 }
 
