--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 header{    
     background-position: center center;
     height: 350px;
-    background-image: url(/mandarin/img/bg2.jpg);
+    background-image: url(/img/bg2.jpg);
 }
 
 h1,h2{
@@ -37,6 +37,7 @@ h2{
     font: caption;
     padding: 5px 15px ;
 }
+
 
 h3{
     text-align: center;
