--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,7 @@ header{
     background-position: center center;
     height: 350px;
     background-image: url(/img/bg2.jpg);
-    background-size: 100%;
-    
+    background-size: cover;
 }
 
 h1,h2{
